--- a/.ebextensions/ruby.config
+++ b/.ebextensions/ruby.config
@@ -1,8 +1,6 @@
-option_settings:
-  - option_name: BUNDLE_DISABLE_SHARED_GEMS
-    value: "1"
-  - option_name: BUNDLE_PATH
-    value: "vendor/bundle"
+commands:
+  command1:
+    command: bundle update
 packages:
     yum:
         git: []
