--- a/config/database.yml
+++ b/config/database.yml
@@ -20,7 +20,7 @@ development:
   database: portfolio_site_development
   pool: 5
   username: postgres
-  password: nAmastE2662@
+  password: 
   timeout: 5000
  
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -50,7 +50,7 @@ test:
   database: portfolio_site_test
   pool: 5
   username: postgres
-  password: nAmastE2662@
+  password: 
   timeout: 5000
 
 production:   
