--- a/config/database.yml
+++ b/config/database.yml
@@ -56,8 +56,8 @@ test:
 production:   
   adapter: postgresql
   encoding: utf8
-  database: <%= ENV['RDS_DB_NAME'] %>   
-  username: <%= ENV['RDS_USERNAME'] %>   
-  password: <%= ENV['RDS_PASSWORD'] %>   
-  host: <%= ENV['RDS_HOSTNAME'] %>   
-  port: <%= ENV['RDS_PORT'] %>
+  # database: <%= ENV['RDS_DB_NAME'] %>   
+  # username: <%= ENV['RDS_USERNAME'] %>   
+  # password: <%= ENV['RDS_PASSWORD'] %>   
+  # host: <%= ENV['RDS_HOSTNAME'] %>   
+  # port: <%= ENV['RDS_PORT'] %>
