--- a/.gitignore
+++ b/.gitignore
@@ -29,8 +29,10 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+.bashrc
 
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+config/database.yml
