--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@
 /config/master.key
 .bashrc
 
+/config/local_env.yml
+
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
